syntax = "proto3";

package grpc.ghostcache;
option java_package = "grpc.ghostcache";
option java_multiple_files = true;

//-----------------------------------------------------------------------------
// service definition
service CacheService {
  rpc Get(GetRequest) returns (GetReply);
  rpc Put(PutRequest) returns (PutReply);
  rpc Invalidate(InvalidateRequest) returns (InvalidateReply);
  rpc ListKeys(Empty) returns (stream KeyEntry);

  // new versioning methods
  rpc GetVersioned(VersionedGetRequest) returns (GetReply);
  rpc History(GetRequest) returns (HistoryReply);
  rpc Rollback(VersionedGetRequest) returns (PutReply);
}

//-----------------------------------------------------------------------------
// common messages
message Empty {}

message GetRequest {
  string key = 1;
}

message GetReply {
  bool   found = 1;
  bytes  value = 2;
}

message PutRequest {
  string key    = 1;
  bytes  value  = 2;
  int32  ttlSec = 3;
}

message PutReply {
  bool ok = 1;
}

message InvalidateRequest {
  string key = 1;
}

message InvalidateReply {
  bool ok = 1;
}

message KeyEntry {
  string key = 1;
}

//-----------------------------------------------------------------------------
// versioning messages
message VersionedGetRequest {
  string key     = 1;
  string version = 2;  // if empty, return latest
}

message HistoryEntry {
  string version   = 1;
  int64  timestamp = 2;
}

message HistoryReply {
  repeated HistoryEntry versions = 1;
}
